# check_installs

./: CMakeLists.txt
src/: libcv_check.cpp  libtorch_check.cpp
